# browser-pool

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/browser_pool/: chrome_driver_pool.py  firefox_driver_pool.py
src/config/: webdriver_config.py
src/exception/: BrowserPoolGeneralException.py  InvalidOrMissingConfigurationException.py  UnsupportedOperationSystemException.py
src/provider/: webdriver_provider.py
src/util/: webdriver_utils.py
test/browser_pool/: test_chrome_driver_pool.py  test_firefox_driver_pool.py
