[project]
name = "selenium_webdriver_pool"
version = "1.0.0"
authors = [
  { name="Vikto Shelia", email="viktor.shelya@gmail.com" },
]
description = "Selenium webdriver pool implementation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows/Linux",
]

[project.urls]
"Homepage" = "https://github.com/v-shel/browser-pool"
"Bug Tracker" = "https://github.com/v-shel/browser-pool/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
